fixed x-scrollbar on desktop view due to scrollbar

--- a/capstone-showcase/capstone-showcase/src/App.css
+++ b/capstone-showcase/capstone-showcase/src/App.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   min-height: 100vh !important;
   text-align: center;
+  box-sizing: border-box;
 }
 
 
