--- a/capstone-showcase/src/CSS/AdminDashboard.css
+++ b/capstone-showcase/src/CSS/AdminDashboard.css
@@ -5,7 +5,8 @@
   margin: 0;
   padding: 0;
   position: relative;
-  width: 100vw;
+    max-width: calc(100vw - 17px);
+;
 }
 .admin-dashboard-navbar {
   display: flex;
