--- a/capstone-showcase/src/CSS/ProjectModal.css
+++ b/capstone-showcase/src/CSS/ProjectModal.css
@@ -13,7 +13,8 @@
 
 .project-modal-content {
   background: white;
-  width: 100vw;
+    max-width: calc(100vw - 17px);
+;
   height: 100vh;
   position: relative;
   display: flex;
