--- a/capstone-showcase/src/index.css
+++ b/capstone-showcase/src/index.css
@@ -13,11 +13,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
 a:hover {
   color: #535bf2;
 }
@@ -27,10 +22,11 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
+  min-height: 100vh;
+  box-sizing: border-box;
   padding: 0;
+  max-width: calc(100vw - 17px);
   /* justify-content: center !important; */
-  /* background-color: white; */
-
 }
 
 h1 {
